# egui_ds

./: Cargo.toml  README.md  egui_ds-280b727b1e6cb041.js  egui_ds-280b727b1e6cb041_bg.wasm  index.html
assets/: manifest.json  sw.js
src/: app.rs  lib.rs  main.rs
src/data/: mod.rs
src/data/merger/: mod.rs
src/data/model/: mod.rs
src/data/scraper/: mod.rs  web_scraper.rs
src/scraper/: mod.rs  web_scraper.rs
