[package]
name = "egui_ds"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"


[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
  "accesskit",
  "default_fonts",
  "glow",
  "persistence",
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ehttp = "0.3.0"
thiserror = "1.0.48"
strum = "0.25"
strum_macros = "0.25"
scraper = "0.17.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
